# suffix-array-searching

./: .gitignore  Cargo.toml  LICENSE  justfile  readme.org  todo.org
examples/: rank_curve.rs
py/: benchmark_caller.py  plot.py  plotting_utils.py
src/: bplustree.rs  btree.rs  experiments.rs  experiments_sorted_arrays.rs  interp_search.rs  lib.rs  main.rs  sa_search.rs  util.rs
src/sa/: util_sa.rs
static-search-tree/: Cargo.toml  justfile  memory_simulator.py  plot.py
static-search-tree/examples/: stat.rs
static-search-tree/py/: plot.py  sa_layout
static-search-tree/src/: bench.rs  binary_search.rs  bplustree.rs  btree.rs  eytzinger.rs  interp_search.rs  lib.rs  node.rs  partitioned_s_tree.rs  s_tree.rs  test.rs  util.rs
suffix-array-searching/: Cargo.toml
suffix-array-searching/examples/: rank_curve.rs
suffix-array-searching/src/: lib.rs  main.rs  sa_search.rs  util.rs
