[package]
name = "sa_layout"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = "thin"
incremental = true
opt-level = 3
debug = true
panic = 'abort'

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
itertools = "0.13.0"
log = "0.4.21"
needletail = "0.5.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
sais = { git = "https://github.com/Daniel-Liu-c0deb0t/libsais-rs", version = "0.1.0", features = ["sais64"] }
stderrlog = "0.6.0"
libdivsufsort-rs = "0.1"
ctor = "0.2.8"
color-backtrace = "0.6.1"
serde_json = "1.0.128"
pyo3 = { version = "0.22.2", features = ["extension-module"] }
