[package]
name = "static-search-tree"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
itertools = "0.13.0"
rand = "0.8.5"
stderrlog = "0.6.0"
ctor = "0.2.8"
color-backtrace = "0.6.1"
serde_json = "1.0.128"
pyo3 = { version = "0.22.2", features = ["extension-module"] }
rdst = "0.20.14"
size = "0.4.1"
rayon = "1.10.0"
log = "0.4.22"
