[package]
name = "suffix-array-searching"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.13.0"
needletail = "0.5.1"
rand = "0.8.5"
sais = { git = "https://github.com/Daniel-Liu-c0deb0t/libsais-rs", version = "0.1.0", features = ["sais64"] }
stderrlog = "0.6.0"
libdivsufsort-rs = "0.1"
ctor = "0.2.8"
color-backtrace = "0.6.1"
log = "0.4.22"
clap = { version = "4.5.23", features = ["derive"] }
rand_chacha = "0.3.1"
